  
* Minor enhancements
  
  * Add support for Rails javascript post links (Mark Menard)
  * Upgrade selenium-client dependency to 1.2.14, and update for new waiting
    API (Balint Erdi)
  * Change default app environment from "selenium" to "test"

* Bug fixes

  * Don't create a new instance of WWW::Mechanize for each request
    (Mark Menard)
  
== 0.4.3 / 2009-03-17

* Minor enhancements

  * Support Rails 2.3. Use Rack::Utils to parse params (Matthew Ford)
  * Support for "modular" Sinatra app style (Simon Rozet)
  * Initial Merb and Sinatra compatibility for Selenium mode (Corey Donohoe)
  * When faced with a label with no for attribute, that contains a hidden field
    and another field, as can be the case in Rails 2.3's checkbox view,
    webrat now locates the non-hidden field. (Luke Melia) 
  * Add application_framework config for Selenium mode to determine how to
    start and stop the app server (Corey Donohoe)

* Bug fixes

  * Fix following of absolute redirect URL in Sinatra (Simon Rozet)

== 0.4.2 / 2009-02-24

* Major enhancements

  * Significant improvements to have_selector. It now supports specifying
    attributes in a hash and :count and :content options. See
    have_selector_spec.rb for more.
  * Add the same functionality mentioned above to have_xpath
    
* Minor enhancements

  * Squeeze extra whitespace out of failures messages from contain
    matcher
  * Detect infinite redirects and raise a Webrat::InfiniteRedirectError
    (Daniel Lucraft)

* Bug fixes

  * Properly quote single and double quotes strings in XPath
  * Fix warning caused by Nokogiri deprecating CSS::Parser.parse
    (Aaron Patterson)
  * Accept do/end blocks in matchers. [#157] (Peter Jaros)
  * Quote --chdir option to mongrel_rails to support RAILS_ROOTs with spaces
    (T.J. VanSlyke)

== 0.4.1 / 2009-01-31

* Minor enhancements

  * Support Sinatra 0.9 (Harry Vangberg)
  * Update query param parsing to work with latest Edge Rails