@@ -15,6 +15,7 @@
 
   * Don't create a new instance of WWW::Mechanize for each request
     (Mark Menard)
+  * Select fields with duplicate selected options sent an incorrect value (Noah Davis)
   
 == 0.4.3 / 2009-03-17
 
